--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <!--Новосядло Олексій-->
     <!-- bandura roman -->
     <!-- Віктор Зварич -->
+    <!-- Максим Мельник -->
 </body>
 </html>
