--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <!--Новосядло Олексій-->
     <!-- bandura roman -->
+    <!-- Христина Брошко -->
     <!-- Віктор Зварич -->
     <!-- Максим Мельник -->
 </body>
