--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Максим Мельник -->
     <!--Юрій-->
     <!-- bandura roman -->
+    <!-- Oleh Onopriichuk-->
     <!-- Віктор Зварич -->
 </body>
 
