--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <!--Новосядло Олексій-->
     <!-- Максим Мельник -->
+    <!-- Ольга Станіславська -->
     <!--Юрій-->
     <!-- bandura roman -->
     <!-- Oleh Onopriichuk-->
