Added <header>, 'img' folder, two images

--- a/index.html
+++ b/index.html
@@ -5,10 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fashion photographer Ryan Allen</title>
 </head>
 
 <body>
+    <!-- Віктор Зварич -->
+    <header class="header">
+        <nav class="header__navigation">
+            <a href="/" class="logo">
+                <img class="logo-image" src="img/logo.svg" alt="Logo R. Allen Photography">
+            </a>
+            <ul class="main-menu">
+                <li class="main-menu-item">
+                    <a href="#" class="main-menu-link">About</a>
+                </li>
+                <li class="main-menu-item">
+                    <a href="#" class="main-menu-link">Services</a>
+                </li>
+                <li class="main-menu-item">
+                    <a href="#" class="main-menu-link">Latest works</a>
+                </li>
+                <li class="main-menu-item">
+                    <a href="#" class="main-menu-link">Pricing</a>
+                </li>
+                <li class="main-menu-item">
+                    <a href="#" class="main-menu-link">Testimonials</a>
+                </li>
+                <li class="main-menu-item">
+                    <a href="#" class="main-menu-link">Contact Ryan</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
     <!--Новосядло Олексій-->
     <!-- Максим Мельник -->
     <!-- Ольга Станіславська -->
@@ -16,7 +45,11 @@
     <!-- Христина Брошко -->
     <!--Юрій-->
     <!-- Oleh Onopriichuk-->
+    
     <!-- Віктор Зварич -->
+    <footer class="footer">
+
+    </footer>
 </body>
 
 </html>
