--- a/index.html
+++ b/index.html
@@ -17,35 +17,46 @@
             </a>
             <ul class="main-menu">
                 <li class="main-menu-item">
-                    <a href="#" class="main-menu-link">About</a>
+                    <a class="main-menu-link" href="#">About</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#" class="main-menu-link">Services</a>
+                    <a class="main-menu-link" href="#">Services</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#" class="main-menu-link">Latest works</a>
+                    <a class="main-menu-link" href="#">Latest works</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#" class="main-menu-link">Pricing</a>
+                    <a class="main-menu-link" href="#">Pricing</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#" class="main-menu-link">Testimonials</a>
+                    <a class="main-menu-link" href="#">Testimonials</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#" class="main-menu-link">Contact Ryan</a>
+                    <a class="main-menu-link" href="#">Contact Ryan</a>
                 </li>
             </ul>
         </nav>
+        <section class="banner">
+            <h1 class="banner-title">
+                <span class="banner-profession capitalized">Fashion photographer</span>
+                <span class="banner-name">Ryan Allen</span>
+            </h1>
+            <hr class="short-line">
+            <p class="banner-text capitalized">A new york based photographer specializing
+                in women’s and men’s fashion, street style, event, and portrait photography.</p>
+            <a href="#" class="banner-button capitalized">Contact Ryan</a>
+            <img class="three-dots" src="img/dots.svg" alt="Three dots" >
+        </section>
     </header>
 
     <!--Новосядло Олексій-->
     <!-- Максим Мельник -->
     <!-- Ольга Станіславська -->
-    <!-- bandura roman --> 
+    <!-- bandura roman -->
     <!-- Христина Брошко -->
     <!--Юрій-->
     <!-- Oleh Onopriichuk-->
-    
+
     <!-- Віктор Зварич -->
     <footer class="footer">
 
