--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!-- Віктор Зварич -->
+    <!-- Block-1 Віктор Зварич -->
     <header class="header">
         <nav class="header__navigation">
             <a href="/" class="logo">
@@ -57,7 +57,7 @@
     <!--Юрій-->
     <!-- Oleh Onopriichuk-->
 
-    <!-- Віктор Зварич -->
+    <!-- Block-15 Віктор Зварич -->
     <footer class="footer">
 
     </footer>
