--- a/index.html
+++ b/index.html
@@ -16,31 +16,32 @@
     <!-- Христина Брошко -->
     <!--Юрій-->
     <!-- Oleh Onopriichuk-->
+    <!-- Віктор Зварич -->
 
     <!-- Block-1 Віктор Зварич -->
     <header class="header">
-        <nav class="header__navigation">
+        <nav class="header__nav">
             <a href="/" class="logo">
                 <img class="logo-image" src="img/logo.svg" alt="Logo R. Allen Photography">
             </a>
-            <ul class="main-menu">
-                <li class="main-menu-item">
-                    <a class="main-menu-link" href="#">About</a>
+            <ul class="nav-menu">
+                <li class="nav-menu-item">
+                    <a class="nav-menu-link" href="#">About</a>
                 </li>
-                <li class="main-menu-item">
-                    <a class="main-menu-link" href="#">Services</a>
+                <li class="nav-menu-item">
+                    <a class="nav-menu-link" href="#">Services</a>
                 </li>
-                <li class="main-menu-item">
-                    <a class="main-menu-link" href="#">Latest works</a>
+                <li class="nav-menu-item">
+                    <a class="nav-menu-link" href="#">Latest works</a>
                 </li>
-                <li class="main-menu-item">
-                    <a class="main-menu-link" href="#">Pricing</a>
+                <li class="nav-menu-item">
+                    <a class="nav-menu-link" href="#">Pricing</a>
                 </li>
-                <li class="main-menu-item">
-                    <a class="main-menu-link" href="#">Testimonials</a>
+                <li class="nav-menu-item">
+                    <a class="nav-menu-link" href="#">Testimonials</a>
                 </li>
-                <li class="main-menu-item">
-                    <a class="main-menu-link" href="#">Contact Ryan</a>
+                <li class="nav-menu-item">
+                    <a class="nav-menu-link" href="#">Contact Ryan</a>
                 </li>
             </ul>
         </nav>
@@ -53,13 +54,12 @@
             <p class="banner-text capitalized">A new york based photographer specializing
                 in women’s and men’s fashion, street style, event, and portrait photography.</p>
             <a href="#" class="banner-button capitalized">Contact Ryan</a>
-            <img class="three-dots" src="img/dots.svg" alt="Three dots" >
+            <img class="banner-three-dots" src="img/dots.svg" alt="Three dots" >
         </section>
     </header>
 
     <!-- Block-15 Віктор Зварич -->
     <footer class="footer">
-
     </footer>
 </body>
 
