Added menu links

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
             </a>
             <ul class="nav-menu">
                 <li class="nav-menu-item">
-                    <a class="nav-menu-link" href="#">About</a>
+                    <a class="nav-menu-link" href="#about">About</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a class="nav-menu-link" href="#">Services</a>
+                    <a class="nav-menu-link" href="#services">Services</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a class="nav-menu-link" href="#">Latest works</a>
+                    <a class="nav-menu-link" href="#works">Latest works</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a class="nav-menu-link" href="#">Pricing</a>
+                    <a class="nav-menu-link" href="#pricing">Pricing</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a class="nav-menu-link" href="#">Testimonials</a>
+                    <a class="nav-menu-link" href="#testimonials">Testimonials</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a class="nav-menu-link" href="#">Contact Ryan</a>
+                    <a class="nav-menu-link" href="#contact-form">Contact Ryan</a>
                 </li>
             </ul>
         </nav>
@@ -53,7 +53,7 @@
             <hr class="short-line">
             <p class="banner-text capitalized">A new york based photographer specializing
                 in women’s and men’s fashion, street style, event, and portrait photography.</p>
-            <a href="#" class="banner-button capitalized">Contact Ryan</a>
+            <a href="#contact-form" class="banner-button capitalized">Contact Ryan</a>
             <img class="banner-three-dots" src="img/dots.svg" alt="Three dots" >
         </section>
     </header>
