changed width of logo image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
         <nav class="header__nav">
             <a href="/" class="logo">
-                <img class="logo-image" src="img/logo.svg" alt="Logo R. Allen Photography">
+                <img class="logo-image" src="img/logo.svg" width="174" alt="Logo R. Allen Photography">
             </a>
             <ul class="nav-menu">
                 <li class="nav-menu-item">
@@ -51,7 +51,7 @@
                 <span class="banner-name">Ryan Allen</span>
             </h1>
             <hr class="short-line">
-            <p class="banner-text capitalized">A new york based photographer specializing
+            <p class="banner-text capitalized">A New York based photographer specializing
                 in women’s and men’s fashion, street style, event, and portrait photography.</p>
             <a href="#contact-form" class="banner-button capitalized">Contact Ryan</a>
             <img class="banner-three-dots" src="img/dots.svg" alt="Three dots" >
