moved 'main banner' section into 'main', changed classes

--- a/index.html
+++ b/index.html
@@ -45,21 +45,22 @@
                 </li>
             </ul>
         </nav>
-        <section class="banner">
-            <h1 class="banner-title">
-                <span class="banner-profession capitalized">Fashion photographer</span>
-                <span class="banner-name">Ryan Allen</span>
-            </h1>
-            <hr class="short-line">
-            <p class="banner-text capitalized">A New York based photographer specializing
-                in women’s and men’s fashion, street style, event, and portrait photography.</p>
-            <a href="#contact-form" class="banner-button capitalized">Contact Ryan</a>
-            <img class="banner-three-dots" src="img/dots.svg" alt="Three dots" >
-        </section>
     </header>
     
-    <!--Block-2 Oleksii Novosiadlo-->
-    <main class="main">
+    <main class="main">        
+        <section class="main__banner hero-banner">
+            <h1 class="main__banner-title">
+                <span class="main__banner-profession capitalized">Fashion photographer</span>
+                <span class="main__banner-name">Ryan Allen</span>
+            </h1>
+            <hr class="main__banner-line">
+            <p class="main__banner-text capitalized">A New York based photographer specializing
+                in women’s and men’s fashion, street style, event, and portrait photography.</p>
+            <a href="#contact-form" class="main__banner-button capitalized">Contact Ryan</a>
+            <img class="main__banner-three-dots" src="img/dots.svg" alt="Three dots" >
+        </section>
+
+        <!--Block-2 Oleksii Novosiadlo-->
         <div class="main__photo-of-girl">
             <img width="400" src="img/Photographer_takes_a_photo_of_the_girl.png" alt="Photographer takes a photo of the girl.">
         </div>
