--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Fashion photographer Ryan Allen</title>
 </head>
 
-<body>    
+<body>
     <!--Новосядло Олексій-->
     <!-- Максим Мельник -->
     <!-- Ольга Станіславська -->
@@ -46,8 +46,8 @@
             </ul>
         </nav>
     </header>
-    
-    <main class="main">        
+
+    <main class="main">
         <section class="main__banner hero-banner">
             <h1 class="main__banner-title">
                 <span class="main__banner-profession capitalized">Fashion photographer</span>
@@ -57,24 +57,48 @@
             <p class="main__banner-text capitalized">A New York based photographer specializing
                 in women’s and men’s fashion, street style, event, and portrait photography.</p>
             <a href="#contact-form" class="main__banner-button capitalized">Contact Ryan</a>
-            <img class="main__banner-three-dots" src="img/dots.svg" alt="Three dots" >
+            <img class="main__banner-three-dots" src="img/dots.svg" alt="Three dots">
         </section>
 
         <!--Block-2 Oleksii Novosiadlo-->
         <div class="main__photo-of-girl">
-            <img width="400" src="img/Photographer_takes_a_photo_of_the_girl.png" alt="Photographer takes a photo of the girl.">
+            <img width="400" src="img/Photographer_takes_a_photo_of_the_girl.png"
+                alt="Photographer takes a photo of the girl.">
         </div>
         <section class="About-photographer">
             <h2 class="About-photographer__title">About Ryan Allen</h2>
             <hr class="About-photographer__line">
-            <p class="About-photographer__text">PROFESSIONAL PHOTOGRAPHER TAKING YOUR BRAND AND IDENTITY TO THE NEXT LEVEL.</p>
-            <p class="About-photographer__text">Having worked and learned from world artists such as John Maison, Steven Ferrel, Stanley Fingerstone, and Pierre de Fontanier in the course of his photographic sojourn at New York, Ryan is undoubtedly a real craftsman who is able to see the beauty in ordinary things. </p>
-            <p class="About-photographer__text">As one of the best fashion photographers in New York City, Ryan Allen has had the pleasure of working with Vogue, Cosmopolitan, Yves Saint Laurent, Harper’s Bazaar, Karl Lagerfeld, Bella Hadid, Alexandra Daddario, and many others fashion brands and models.</p>
+            <p class="About-photographer__text">PROFESSIONAL PHOTOGRAPHER TAKING YOUR BRAND AND IDENTITY TO THE NEXT
+                LEVEL.</p>
+            <p class="About-photographer__text">Having worked and learned from world artists such as John Maison, Steven
+                Ferrel, Stanley Fingerstone, and Pierre de Fontanier in the course of his photographic sojourn at New
+                York, Ryan is undoubtedly a real craftsman who is able to see the beauty in ordinary things. </p>
+            <p class="About-photographer__text">As one of the best fashion photographers in New York City, Ryan Allen
+                has had the pleasure of working with Vogue, Cosmopolitan, Yves Saint Laurent, Harper’s Bazaar, Karl
+                Lagerfeld, Bella Hadid, Alexandra Daddario, and many others fashion brands and models.</p>
             <a class="About-photographer__button" href="#">Learn more</a>
         </section>
     </main>
 
     <!-- Block-15 Віктор Зварич -->
+
+    <!-- Block-14 Христина Брошко-->
+    <footer class="footer">
+        <div class="footer_contacts">
+            <form action="https://formspree.io/f/mwkzwgke" method="post">
+                <hr class="Form for users">
+                <h2>Let's start a conversation.<h2>
+                        <div class="row"></div>
+                        <p>RYAN IS LOOKING FORWARD TO HEARING MORE ABOUT YOUR PROJECT AND IDEAS.</p>
+                        <input type="name" class="user_name" placeholder="Enter your full name*" required="">
+                        <input type="tel" class="user_tel" placeholder="Enter your phone number*" required="">
+                        <input type="date" class="date">
+                        <textarea name="message" cols="30" rows="10"></textarea>
+                        <input type="submit" value="Request a quote">
+
+        </div>
+    </footer>
+    
     <footer class="footer">
     </footer>
 </body>
