--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <!--Block-2 Oleksii Novosiadlo-->
         <div class="main__photo-of-girl">
-            <img width="400" src="img/Photographer_takes_a_photo_of_the_girl.png"
+            <img width="400" src="img/photographer_takes_a_photo_of_the_girl.png"
                 alt="Photographer takes a photo of the girl.">
         </div>
         <section class="About-photographer">
@@ -78,6 +78,20 @@
                 Lagerfeld, Bella Hadid, Alexandra Daddario, and many others fashion brands and models.</p>
             <a class="About-photographer__button" href="#">Learn more</a>
         </section>
+        <!--Block-3 Oleksii Novosiadlo-->
+        <div class="latest-work">
+            <h2 class="latest-work__title">Latest Works</h2>
+            <hr class="latest-work__line">
+            <p class="latest-work__text">RYAN'S PASSION IS PHOTOSHOOTS FOR LOOKBOOKS AND COMMERCIALS.</p>
+            <div class="latest-work__photos">
+                <img class="latest-work__image" width="300" src="img/girl_hides_from_sun.png"
+                    alt="Girl hides from the sun">
+                <img class="latest-work__image" width="300" src="img/girl_in_a_half_turn.png"
+                    alt="A girl in a half turn">
+                <img class="latest-work__image" width="300" src="img/beautiful_girl_in_jacket.png"
+                    alt="Beatiful girl in a jacket">
+            </div>
+        </div>
     </main>
 
     <!-- Block-15 Віктор Зварич -->
@@ -98,7 +112,7 @@
 
         </div>
     </footer>
-    
+
     <footer class="footer">
     </footer>
 </body>
