--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fashion photographer Ryan Allen</title>
+    <title>R.Allen Photography</title>
 </head>
 
 <body>
@@ -18,11 +18,11 @@
     <!-- Oleh Onopriichuk-->
     <!-- Віктор Зварич -->
 
-    <!-- Block-1 Віктор Зварич -->
+    <!-- Block-0 Віктор Зварич -->
     <header class="header">
         <nav class="header__nav">
             <a href="/" class="logo">
-                <img class="logo-image" src="img/logo.svg" width="174" alt="Logo R. Allen Photography">
+                <img class="logo-image" src="img/logo.svg" width="174" alt="Logo image of the 'R.Allen Photography' website">
             </a>
             <ul class="nav-menu">
                 <li class="nav-menu-item">
@@ -48,14 +48,15 @@
     </header>
 
     <main class="main">
+        <!-- Block-1 Віктор Зварич -->
         <section class="main__banner hero-banner">
             <h1 class="main__banner-title">
                 <span class="main__banner-profession capitalized">Fashion photographer</span>
                 <span class="main__banner-name">Ryan Allen</span>
             </h1>
             <hr class="main__banner-line">
-            <p class="main__banner-text capitalized">A New York based photographer specializing
-                in women’s and men’s fashion, street style, event, and portrait photography.</p>
+            <p class="main__banner-text capitalized">A New York based photographer specializing in women’s and men’s
+                fashion, street style, event, and portrait photography.</p>
             <a href="#contact-form" class="main__banner-button capitalized">Contact Ryan</a>
             <img class="main__banner-three-dots" src="img/dots.svg" alt="Three dots">
         </section>
@@ -78,6 +79,7 @@
                 Lagerfeld, Bella Hadid, Alexandra Daddario, and many others fashion brands and models.</p>
             <a class="About-photographer__button" href="#">Learn more</a>
         </section>
+
         <!--Block-3 Oleksii Novosiadlo-->
         <div class="latest-work">
             <h2 class="latest-work__title">Latest Works</h2>
@@ -93,8 +95,6 @@
             </div>
         </div>
     </main>
-
-    <!-- Block-15 Віктор Зварич -->
 
     <!-- Block-14 Христина Брошко-->
     <footer class="footer">
@@ -113,6 +113,7 @@
         </div>
     </footer>
 
+    <!-- Block-15 Віктор Зварич -->
     <footer class="footer">
     </footer>
 </body>
