--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <header class="header">
         <nav class="header__nav">
             <a href="/" class="logo">
-                <img class="logo-image" src="img/logo.svg" width="174" alt="Logo image of the 'R.Allen Photography' website">
+                <img class="logo-image" src="img/logo.svg" width="174"
+                    alt="Logo image of the 'R.Allen Photography' website">
             </a>
             <ul class="nav-menu">
                 <li class="nav-menu-item">
@@ -94,6 +95,58 @@
                     alt="Beatiful girl in a jacket">
             </div>
         </div>
+
+        <!--Block-12 Olha Stanislavska-->
+        <section class="portfolio">
+            <h2 class="portfolio__title">Portfolio</h2>
+            <hr class="portfolio__line">
+            <p class="portfolio__title-text capitalized">Every frame is important. Every photoshoot is art.</p>
+            <img class="portfolio__image" width="360" src="img/portfolio-girl-in-lush-dress.png"
+                alt="A girl in a lush dress">
+            <img class="portfolio__image" width="360" src="img/portfolio-girl-with-mirror.png"
+                alt="A girl with a mirror">
+            <img class="portfolio__image" width="360" src="img/portfolio-portrait-with-flower-earring.png"
+                alt="A portrait of the girl in flower earring">
+            <img class="portfolio__image" width="360" src="img/portfolio-portrait-with-hand.png"
+                alt="A portrait of the girl with hand near her face">
+        </section>
+
+        <!--Block-13 Olha Stanislavska-->
+        <section class="faq">
+            <h2 class="faq__title">FAQ</h2>
+            <hr class="faq__line">
+            <div class="faq__all-questions">
+                <details class="faq__question">
+                    <summary>Does Ryan shoot only in New York?</summary>
+                    Most of Ryan's projects are in New York but shooting is possible in other cities of the USA and
+                    other countries upon request.
+                </details>
+                <details class="faq__question">
+                    <summary>How long does the editing take?</summary>
+                    It all depends on the amount of footage and the number of photos that go through retouching.
+                </details>
+                <details class="faq__question">
+                    <summary>What does Ryan shoot?</summary>
+                    Ryan is a real guru of fashion, event, commercial photography, and portraits.
+                </details>
+                <details class="faq__question">
+                    <summary>How to schedule a shooting?</summary>
+                    Fill out the form below or contact Ryan directly. Tell which date you need, and Ryan will do his
+                    best to find a time slot for you.
+                </details>
+                <details class="faq__question">
+                    <summary>What if I have a creative idea for shooting?</summary>
+                    Ryan is open for inquires and interesting opportunities. TFP shoots are possible if your idea is
+                    really creative.
+                </details>
+                <details class="faq__question">
+                    <summary>Where can I find Ryan's works?</summary>
+                    Ryan's works are published in different fashion magazines: Haper's Bazaar, Vogue, Cosmopolitan, and
+                    many others.
+                </details>
+            </div>
+        </section>
+
     </main>
 
     <!-- Block-14 Христина Брошко-->
