--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 
         <!--Block-12 Olha Stanislavska-->
         <section class="portfolio">
-            <h2 class="portfolio__title">Portfolio</h2>
-            <hr class="portfolio__line">
-            <p class="portfolio__title-text capitalized">Every frame is important. Every photoshoot is art.</p>
+            <h2 class="portfolio__title h2-title">Portfolio</h2>
+            <hr class="portfolio__line line">
+            <h3 class="portfolio__text-title h3-title">Every frame is important. Every photoshoot is art.</h3>
             <img class="portfolio__image" width="360" src="img/portfolio-girl-in-lush-dress.png"
                 alt="A girl in a lush dress">
             <img class="portfolio__image" width="360" src="img/portfolio-girl-with-mirror.png"
@@ -113,8 +113,8 @@
 
         <!--Block-13 Olha Stanislavska-->
         <section class="faq">
-            <h2 class="faq__title">FAQ</h2>
-            <hr class="faq__line">
+            <h2 class="faq__title h2-title">FAQ</h2>
+            <hr class="faq__line line">
             <div class="faq__all-questions">
                 <details class="faq__question">
                     <summary>Does Ryan shoot only in New York?</summary>
