--- a/index.html
+++ b/index.html
@@ -96,37 +96,37 @@
             </div>
         </div>
         <!-- Block-4 bandura roman -->
-        <section>
-			<h2 class="services"></h2>
-			<div class="row">-</div>
-			<p class="opportunitties">RYAN IS OPEN FOR NEW OPPORTUNITIES AND COLLABORATIONS.</p>
-			<ul class="services__info">
-				<li>
-					<img class="aperture-icon" src="images/aperture-icon.png" alt="aperture-icon">
-					<h3>Portraits</h3>
-					<p>Setting the right accents in beautiful portraits.</p>
-					<a href="#">REQUEST A QUOTE</a>
-				</li>
-				<li>
-					<img class="streetphoto-icon" src="images/streetphoto-icon.png" alt="streetphoto-icon">
-					<h3>Street Style</h3>
-					<p>Catching the brightest moments in the scenery of the big city.</p>
-					<a href="#">REQUEST A QUOTE</a>
-				</li>
-				<li>
-					<img class="camera-icon" src="images/camera-icon.png" alt="camera-icon">
-					<h3>Advertising</h3>
-					<p>Shootings for advertising campaigns and e-commerce.</p>
-					<a href="#">REQUEST A QUOTE</a>
-				</li>
-				<li>
-					<img class="lens-icon" src="images/lens-icon.png" alt="lens-icon">
-					<h3>Events</h3>
-					<p>Setting the right accents in beautiful portraits.</p>
-					<a href="#">REQUEST A QUOTE</a>
-				</li>
-			</ul>
-		</section>
+        <section id="services">
+            <h2 class="services">Services</h2>
+            <hr class="main__banner-line">
+            <p class="opportunitties">RYAN IS OPEN FOR NEW OPPORTUNITIES AND COLLABORATIONS.</p>
+            <ul class="services__info">
+                <li>
+                    <img class="aperture-icon" src="img/aperture-icon.png" alt="aperture-icon">
+                    <h3>Portraits</h3>
+                    <p>Setting the right accents in beautiful portraits.</p>
+                    <a href="#">REQUEST A QUOTE</a>
+                </li>
+                <li>
+                    <img class="streetphoto-icon" src="img/streetphoto-icon.png" alt="streetphoto-icon">
+                    <h3>Street Style</h3>
+                    <p>Catching the brightest moments in the scenery of the big city.</p>
+                    <a href="#">REQUEST A QUOTE</a>
+                </li>
+                <li>
+                    <img class="camera-icon" src="img/camera-icon.png" alt="camera-icon">
+                    <h3>Advertising</h3>
+                    <p>Shootings for advertising campaigns and e-commerce.</p>
+                    <a href="#">REQUEST A QUOTE</a>
+                </li>
+                <li>
+                    <img class="lens-icon" src="img/lens-icon.png" alt="lens-icon">
+                    <h3>Events</h3>
+                    <p>Setting the right accents in beautiful portraits.</p>
+                    <a href="#">REQUEST A QUOTE</a>
+                </li>
+            </ul>
+        </section>
         <!--Block -8 Yriy Murachov-->
         <section class="testimonials">
             <div class="testimonials__block">
