Changed h2, hr, p classes according to the table

--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
         </section>
         <!--Block-12 Olha Stanislavska-->
         <section class="portfolio">
-            <h2 class="portfolio__title h2-title">Portfolio</h2>
-            <hr class="portfolio__line line">
-            <h3 class="portfolio__text-title h3-title">Every frame is important. Every photoshoot is art.</h3>
+            <h2 class="portfolio__title h2-title text-align-center">Portfolio</h2>
+            <hr class="portfolio__line line line-center">
+            <p class="portfolio__subtitle subtitle uppercase">Every frame is important. Every photoshoot is art.</p>
             <img class="portfolio__image" width="360" src="img/portfolio-girl-in-lush-dress.png"
                 alt="A girl in a lush dress">
             <img class="portfolio__image" width="360" src="img/portfolio-girl-with-mirror.png"
@@ -197,8 +197,8 @@
 
         <!--Block-13 Olha Stanislavska-->
         <section class="faq">
-            <h2 class="faq__title h2-title">FAQ</h2>
-            <hr class="faq__line line">
+            <h2 class="faq__title h2-title text-align-center">FAQ</h2>
+            <hr class="faq__line line line-center">
             <div class="faq__all-questions">
                 <details class="faq__question">
                     <summary>Does Ryan shoot only in New York?</summary>
