--- a/index.html
+++ b/index.html
@@ -234,21 +234,23 @@
     </main>
 
     <!-- Block-14 Христина Брошко-->
-    <footer class="footer">
-        <div class="footer_contacts">
-            <form action="https://formspree.io/f/mwkzwgke" method="post">
-                <hr class="Form for users">
-                <h2>Let's start a conversation.<h2>
-                        <div class="row"></div>
-                        <p>RYAN IS LOOKING FORWARD TO HEARING MORE ABOUT YOUR PROJECT AND IDEAS.</p>
-                        <input type="name" class="user_name" placeholder="Enter your full name*" required="">
-                        <input type="tel" class="user_tel" placeholder="Enter your phone number*" required="">
-                        <input type="date" class="date">
-                        <textarea name="message" cols="30" rows="10"></textarea>
-                        <input type="submit" value="Request a quote">
+    <section class="form">
+        <footer class="footer">
+            <div class="footer_contacts">
+                <form action="https://formspree.io/f/mwkzwgke" method="post">
+                    <hr class="Form_for_users">
+                    <h2>Let's start a conversation.<h2>
+                            <div class="row"></div>
+                            <p>RYAN IS LOOKING FORWARD TO HEARING MORE ABOUT YOUR PROJECT AND IDEAS.</p>
+                            <input type="name" class="user_name" placeholder="Enter your full name*" required="">
+                            <input type="tel" class="user_tel" placeholder="Enter your phone number*" required="">
+                            <input type="date" class="date">
+                            <textarea name="message" cols="30" rows="10"></textarea>
+                            <input type="submit" value="Request a quote">
 
-        </div>
-    </footer>
+            </div>
+        </footer>
+    </section>
 
     <!-- Block-15 Віктор Зварич -->
     <footer class="footer">
