--- a/index.html
+++ b/index.html
@@ -127,6 +127,48 @@
                 </li>
             </ul>
         </section>
+        <!--Block-6 Oleh Onopriichuk-->
+        <section class="why_ryan">
+            <h2 class="why_ryan__title">Why Ryan?</h2>
+            <hr class="why_ryan _line">
+            <p class="why_ryan__second_title">Photography has truly become a huge part of Ryan`s life.</p>
+            <div class="why_ryan__icons">
+                <div class="why_ryan__icons_cards">
+                    <img class="why_ryan__img_vast_experience" src="img/vast_experience.jpg" alt="Vast Experience">
+                    <h3 class="why_ryan__h3">Vast Experience</h3>
+                    <p class="why_ryan__card_text">Ryan has been photographing for more than 10 years, 4 of which
+                        he has worked as a fashion photographer.</p>
+                    <ul class="why_ryan__points">
+                        <li>58 clients in the USA</li>
+                        <li>10 000+ edited photos</li>
+                        <li>Shooting for 5+ top magazines</li>
+                    </ul>
+                </div>
+                <div class="why_ryan__icons_cards">
+                    <img class="why_ryan__img_modern_equipment" src="img/modern_equipment.jpg" alt="Modern Equipment">
+                    <h3 class="why_ryan__h3">Modern Equipment</h3>
+                    <p class="why_ryan__card_text">He uses only the latest equipment which provides amazing quality and
+                        highlights the details in every frame.</p>
+                    <ul class="why_ryan__points">
+                        <li>Canon EOS 5D Mark IV 24-105L IS II</li>
+                        <li>Canon EF 24-70mm f/2.8 L II USM lens</li>
+                        <li>OWERPLANT UV 95 mm color filter</li>
+                    </ul>
+                </div>
+                <div class="why_ryan__icons_cards">
+                    <img class="why_ryan__img_professional_editing" src="img/professional_editing.jpg"
+                        alt="Professional Editingt">
+                    <h3 class="why_ryan__h3">Professional Editing</h3>
+                    <p class="why_ryan__card_text">After the photoshoot, all photos undergo thorough editing, you get a
+                        format that meets your requirements.</p>
+                    <ul class="why_ryan__points">
+                        <li>Full-resolution final images</li>
+                        <li>Photos delivered via online gallery</li>
+                        <li>Processing time is up to 2 months</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
         <!--Block -8 Yriy Murachov-->
         <section class="testimonials">
             <div class="testimonials__block">
@@ -137,12 +179,14 @@
                     <p>Amanda Li, Vogue</p>
                 </div>
                 <div class="testimonials__block__text">
-                    <p>Working with Ryan was an incredible experience. Everything was perfect from the very beginning of
+                    <p>Working with Ryan was an incredible experience. Everything was perfect from the very
+                        beginning of
                         the
                         photoshoot. Ryan is very talented in his field and you can really tell that he loves what he
                         does.
                         We
-                        absolutely love how all the images turned out and will go back to Ryan for future photoshoots.
+                        absolutely love how all the images turned out and will go back to Ryan for future
+                        photoshoots.
                     </p>
                 </div>
                 <div class="testimonials__backgroundphoto">
@@ -155,9 +199,11 @@
                     <p>Sam Hoe, YSL</p>
                 </div>
                 <div class="testimonials__block__text">
-                    <p>We have only pleasant impressions from working with this photographer. Ryan took all our wishes
+                    <p>We have only pleasant impressions from working with this photographer. Ryan took all our
+                        wishes
                         into
-                        account and really pleased us with excellent quality and stylish frames. We will contact this
+                        account and really pleased us with excellent quality and stylish frames. We will contact
+                        this
                         photographer for shooting our next collections for commercials. </p>
                 </div>
                 <div class="testimonials__backgroundphoto">
@@ -170,9 +216,11 @@
                     <p>Diana Peterson</p>
                 </div>
                 <div class="testimonials__block__text">
-                    <p>I am a beginner fashion model and do not yet have much experience in commercial shootings. Ryan
+                    <p>I am a beginner fashion model and do not yet have much experience in commercial shootings.
+                        Ryan
                         has a
-                        unique way of making you feel comfortable in the frame. He does a great job of finding the best
+                        unique way of making you feel comfortable in the frame. He does a great job of finding the
+                        best
                         location, providing direction, and listening to your wishes. </p>
                 </div>
                 <div class="testimonials__backgroundphoto">
@@ -225,7 +273,8 @@
                 </details>
                 <details class="faq__question">
                     <summary>Where can I find Ryan's works?</summary>
-                    Ryan's works are published in different fashion magazines: Haper's Bazaar, Vogue, Cosmopolitan, and
+                    Ryan's works are published in different fashion magazines: Haper's Bazaar, Vogue, Cosmopolitan,
+                    and
                     many others.
                 </details>
             </div>
