--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <p class="why_ryan__second_title">Photography has truly become a huge part of Ryan`s life.</p>
             <div class="why_ryan__icons">
                 <div class="why_ryan__icons_cards">
-                    <img class="why_ryan__img_vast_experience" src="img/vast_experience.jpg" alt="Vast Experience">
+                    <img class="why_ryan__img_vast_experience" src="img/vast_experience.png" alt="Vast Experience">
                     <h3 class="why_ryan__h3">Vast Experience</h3>
                     <p class="why_ryan__card_text">Ryan has been photographing for more than 10 years, 4 of which
                         he has worked as a fashion photographer.</p>
@@ -145,7 +145,7 @@
                     </ul>
                 </div>
                 <div class="why_ryan__icons_cards">
-                    <img class="why_ryan__img_modern_equipment" src="img/modern_equipment.jpg" alt="Modern Equipment">
+                    <img class="why_ryan__img_modern_equipment" src="img/modern_equipment.png" alt="Modern Equipment">
                     <h3 class="why_ryan__h3">Modern Equipment</h3>
                     <p class="why_ryan__card_text">He uses only the latest equipment which provides amazing quality and
                         highlights the details in every frame.</p>
@@ -156,7 +156,7 @@
                     </ul>
                 </div>
                 <div class="why_ryan__icons_cards">
-                    <img class="why_ryan__img_professional_editing" src="img/professional_editing.jpg"
+                    <img class="why_ryan__img_professional_editing" src="img/professional_editing.png"
                         alt="Professional Editingt">
                     <h3 class="why_ryan__h3">Professional Editing</h3>
                     <p class="why_ryan__card_text">After the photoshoot, all photos undergo thorough editing, you get a
