Changed classes according to the table

--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
 
     <main class="main">
         <!-- Block-1 Віктор Зварич -->
-        <section class="main__banner hero-banner">
-            <h1 class="main__banner-title">
-                <span class="main__banner-profession capitalized">Fashion photographer</span>
-                <span class="main__banner-name">Ryan Allen</span>
+        <section class="hero">
+            <h1 class="hero__title h2-title text-align-center">
+                <span class="hero__profession uppercase">Fashion photographer</span>
+                <span class="hero__name">Ryan Allen</span>
             </h1>
-            <hr class="main__banner-line">
-            <p class="main__banner-text capitalized">A New York based photographer specializing in women’s and men’s
+            <hr class="line line-center">
+            <p class="subtitle uppercase">A New York based photographer specializing in women’s and men’s
                 fashion, street style, event, and portrait photography.</p>
-            <a href="#contact-form" class="main__banner-button capitalized">Contact Ryan</a>
-            <img class="main__banner-three-dots" src="img/dots.svg" alt="Three dots">
+            <a href="#contact-form" class="hero__button uppercase">Contact Ryan</a>
+            <img class="hero__dots" src="img/dots.svg" alt="Three dots">
         </section>
 
         <!--Block-2 Oleksii Novosiadlo-->
