--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>R.Allen Photography</title>
 </head>
-
 <body>
     <!--Новосядло Олексій-->
     <!-- Максим Мельник -->
@@ -17,7 +15,6 @@
     <!--Юрій-->
     <!-- Oleh Onopriichuk-->
     <!-- Віктор Зварич -->
-
     <!-- Block-0 Віктор Зварич -->
     <header class="header">
         <nav class="header__nav">
@@ -49,17 +46,17 @@
     </header>
 
     <main class="main">
-        <!-- Block-1  Віктор Зварич -->
+        <!-- Block-1 Віктор Зварич -->
         <section class="hero">
             <h1 class="hero__title h2-title text-align-center">
                 <span class="hero__profession uppercase">Fashion photographer</span>
                 <span class="hero__name">Ryan Allen</span>
             </h1>
-            <hr class="main__banner-line">
-            <p class="main__banner-text capitalized">A New York based photographer specializing in women’s and men’s
+            <hr class="line line-center">
+            <p class="subtitle uppercase">A New York based photographer specializing in women’s and men’s
                 fashion, street style, event, and portrait photography.</p>
-            <a href="#contact-form" class="main__banner-button capitalized">Contact Ryan</a>
-            <img class="main__banner-three-dots" src="img/dots.svg" alt="Three dots">
+            <a href="#contact-form" class="hero__button uppercase">Contact Ryan</a>
+            <img class="hero__dots" src="img/dots.svg" alt="Three dots">
         </section>
 
         <!--Block-2 Oleksii Novosiadlo-->
@@ -80,7 +77,6 @@
                 Lagerfeld, Bella Hadid, Alexandra Daddario, and many others fashion brands and models.</p>
             <a class="About-photographer__button" href="#">Learn more</a>
         </section>
-
         <!--Block-3 Oleksii Novosiadlo-->
         <div class="latest-work">
             <h2 class="latest-work__title">Latest Works</h2>
@@ -127,48 +123,6 @@
                 </li>
             </ul>
         </section>
-        <!--Block-6 Oleh Onopriichuk-->
-        <section class="why_ryan">
-            <h2 class="why_ryan__title">Why Ryan?</h2>
-            <hr class="why_ryan _line">
-            <p class="why_ryan__second_title">Photography has truly become a huge part of Ryan`s life.</p>
-            <div class="why_ryan__icons">
-                <div class="why_ryan__icons_cards">
-                    <img class="why_ryan__img_vast_experience" src="img/vast_experience.png" alt="Vast Experience">
-                    <h3 class="why_ryan__h3">Vast Experience</h3>
-                    <p class="why_ryan__card_text">Ryan has been photographing for more than 10 years, 4 of which
-                        he has worked as a fashion photographer.</p>
-                    <ul class="why_ryan__points">
-                        <li>58 clients in the USA</li>
-                        <li>10 000+ edited photos</li>
-                        <li>Shooting for 5+ top magazines</li>
-                    </ul>
-                </div>
-                <div class="why_ryan__icons_cards">
-                    <img class="why_ryan__img_modern_equipment" src="img/modern_equipment.png" alt="Modern Equipment">
-                    <h3 class="why_ryan__h3">Modern Equipment</h3>
-                    <p class="why_ryan__card_text">He uses only the latest equipment which provides amazing quality and
-                        highlights the details in every frame.</p>
-                    <ul class="why_ryan__points">
-                        <li>Canon EOS 5D Mark IV 24-105L IS II</li>
-                        <li>Canon EF 24-70mm f/2.8 L II USM lens</li>
-                        <li>OWERPLANT UV 95 mm color filter</li>
-                    </ul>
-                </div>
-                <div class="why_ryan__icons_cards">
-                    <img class="why_ryan__img_professional_editing" src="img/professional_editing.png"
-                        alt="Professional Editingt">
-                    <h3 class="why_ryan__h3">Professional Editing</h3>
-                    <p class="why_ryan__card_text">After the photoshoot, all photos undergo thorough editing, you get a
-                        format that meets your requirements.</p>
-                    <ul class="why_ryan__points">
-                        <li>Full-resolution final images</li>
-                        <li>Photos delivered via online gallery</li>
-                        <li>Processing time is up to 2 months</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
         <!--Block -8 Yriy Murachov-->
         <section class="testimonials">
             <div class="testimonials__block">
@@ -179,14 +133,12 @@
                     <p>Amanda Li, Vogue</p>
                 </div>
                 <div class="testimonials__block__text">
-                    <p>Working with Ryan was an incredible experience. Everything was perfect from the very
-                        beginning of
+                    <p>Working with Ryan was an incredible experience. Everything was perfect from the very beginning of
                         the
                         photoshoot. Ryan is very talented in his field and you can really tell that he loves what he
                         does.
                         We
-                        absolutely love how all the images turned out and will go back to Ryan for future
-                        photoshoots.
+                        absolutely love how all the images turned out and will go back to Ryan for future photoshoots.
                     </p>
                 </div>
                 <div class="testimonials__backgroundphoto">
@@ -199,11 +151,9 @@
                     <p>Sam Hoe, YSL</p>
                 </div>
                 <div class="testimonials__block__text">
-                    <p>We have only pleasant impressions from working with this photographer. Ryan took all our
-                        wishes
+                    <p>We have only pleasant impressions from working with this photographer. Ryan took all our wishes
                         into
-                        account and really pleased us with excellent quality and stylish frames. We will contact
-                        this
+                        account and really pleased us with excellent quality and stylish frames. We will contact this
                         photographer for shooting our next collections for commercials. </p>
                 </div>
                 <div class="testimonials__backgroundphoto">
@@ -216,11 +166,9 @@
                     <p>Diana Peterson</p>
                 </div>
                 <div class="testimonials__block__text">
-                    <p>I am a beginner fashion model and do not yet have much experience in commercial shootings.
-                        Ryan
+                    <p>I am a beginner fashion model and do not yet have much experience in commercial shootings. Ryan
                         has a
-                        unique way of making you feel comfortable in the frame. He does a great job of finding the
-                        best
+                        unique way of making you feel comfortable in the frame. He does a great job of finding the best
                         location, providing direction, and listening to your wishes. </p>
                 </div>
                 <div class="testimonials__backgroundphoto">
@@ -230,9 +178,9 @@
         </section>
         <!--Block-12 Olha Stanislavska-->
         <section class="portfolio">
-            <h2 class="portfolio__title h2-title text-align-center">Portfolio</h2>
-            <hr class="portfolio__line line line-center">
-            <p class="portfolio__subtitle subtitle uppercase">Every frame is important. Every photoshoot is art.</p>
+            <h2 class="portfolio__title h2-title">Portfolio</h2>
+            <hr class="portfolio__line line">
+            <h3 class="portfolio__text-title h3-title">Every frame is important. Every photoshoot is art.</h3>
             <img class="portfolio__image" width="360" src="img/portfolio-girl-in-lush-dress.png"
                 alt="A girl in a lush dress">
             <img class="portfolio__image" width="360" src="img/portfolio-girl-with-mirror.png"
@@ -242,11 +190,10 @@
             <img class="portfolio__image" width="360" src="img/portfolio-portrait-with-hand.png"
                 alt="A portrait of the girl with hand near her face">
         </section>
-
         <!--Block-13 Olha Stanislavska-->
         <section class="faq">
-            <h2 class="faq__title h2-title text-align-center">FAQ</h2>
-            <hr class="faq__line line line-center">
+            <h2 class="faq__title h2-title">FAQ</h2>
+            <hr class="faq__line line">
             <div class="faq__all-questions">
                 <details class="faq__question">
                     <summary>Does Ryan shoot only in New York?</summary>
@@ -273,37 +220,29 @@
                 </details>
                 <details class="faq__question">
                     <summary>Where can I find Ryan's works?</summary>
-                    Ryan's works are published in different fashion magazines: Haper's Bazaar, Vogue, Cosmopolitan,
-                    and
+                    Ryan's works are published in different fashion magazines: Haper's Bazaar, Vogue, Cosmopolitan, and
                     many others.
                 </details>
             </div>
         </section>
-
     </main>
-
     <!-- Block-14 Христина Брошко-->
-    <section class="form">
-        <footer class="footer">
-            <div class="footer_contacts">
-                <form action="https://formspree.io/f/mwkzwgke" method="post">
-                    <hr class="Form_for_users">
-                    <h2>Let's start a conversation.<h2>
-                            <div class="row"></div>
-                            <p>RYAN IS LOOKING FORWARD TO HEARING MORE ABOUT YOUR PROJECT AND IDEAS.</p>
-                            <input type="name" class="user_name" placeholder="Enter your full name*" required="">
-                            <input type="tel" class="user_tel" placeholder="Enter your phone number*" required="">
-                            <input type="date" class="date">
-                            <textarea name="message" cols="30" rows="10"></textarea>
-                            <input type="submit" value="Request a quote">
-
-            </div>
-        </footer>
-    </section>
-
+    <footer class="footer">
+        <div class="footer_contacts">
+            <form action="https://formspree.io/f/mwkzwgke" method="post">
+                <hr class="Form for users">
+                <h2>Let's start a conversation.<h2>
+                        <div class="row"></div>
+                        <p>RYAN IS LOOKING FORWARD TO HEARING MORE ABOUT YOUR PROJECT AND IDEAS.</p>
+                        <input type="name" class="user_name" placeholder="Enter your full name*" required="">
+                        <input type="tel" class="user_tel" placeholder="Enter your phone number*" required="">
+                        <input type="date" class="date">
+                        <textarea name="message" cols="30" rows="10"></textarea>
+                        <input type="submit" value="Request a quote">
+        </div>
+    </footer>
     <!-- Block-15 Віктор Зварич -->
     <footer class="footer">
     </footer>
 </body>
-
 </html>
